--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,9 @@
     padding: 0;
     font-family: 'Lato', sans-serif;
 }
+html{
+    scroll-behavior: smooth;
+}
 .container{
     max-width: 1140px;
     margin: 0 auto;
